# pdistcc

./: .coveragerc  .gitignore  Makefile  NMakefile  README.md  pdistcc.go  requirements.txt  setup.cfg  setup.py  test-requirements.txt
c/: .gitignore  barrier.c  barrier.h  barrier_interproc_test.c  barrier_test.c  bench_inodecache.c  bench_stats.c  bench_stats.h  build.ninja  compiler_properties.c  compiler_properties.h  inodecache.c  inodecache.h  md5.c  md5.h  mkdir_p.c  mkdir_p.h  test_inodecache.c
dat/: thunderingherd.cpp
doc/: client.sample.json  server.sample.json
pdistcc/: cli.py  config.py  fileops.py  inodecache.py  inodecache_bench.py  net.py  pdistcc.py  sched.py  server.py  test_net.py
pdistcc/compiler/: __init__.py  errors.py  gcc.py  msvc.py  wrapper.py
pdistcc/tests/: client.json  fakeops.py  server.json  test_cli.py  test_config.py  test_find_compiler.py  test_gcc.py  test_msvc.py  test_net.py  test_sched.py  test_server.py  test_wrapper.py
pkg/dccclient/: dccclient.go  dccclient_test.go
pkg/dccproto/: dccproto.go  dccproto_test.go
pkg/dccserver/: dccserver.go  dccserver_test.go
pkg/testhelpers/: testhelpers.go
pkg/wrappers/: errors.go  wrappers.go
pkg/wrappers/errors/: errors.go
pkg/wrappers/gcc/: gcc.go  gcc_test.go
src/client/: dcc.go  dcc_test.go
src/compiler/: gcc.go  gcc_test.go  wrapper.go  wrapper_test.go
tests/: test_gcc.py  test_msvc.py  test_net.py
