[metadata]
description = Distributed C/C++ compilation system
author = Alexey Sheplyakov
author_email = asheplyakov@yandex.ru
url = https://github.com/asheplyakov/pdistcc

license_file = COPYING

long_description = distcc alike tool which supports non-GNU C/C++ compilers.

[options]
python_requires = >= 3.6
setup_requires = setuptools
